include/akira_api.h

/*
 * =============================================================================
 * APP LIFECYCLE API
 * =============================================================================
 * Required capability: app.control  (elevated — must not be granted to
 *                                    untrusted apps)
 *
 * App state codes returned by app_get_status():
 */
#define APP_STATE_NEW       0
#define APP_STATE_INSTALLED 1
#define APP_STATE_RUNNING   2
#define APP_STATE_STOPPED   3
#define APP_STATE_ERROR     4
#define APP_STATE_FAILED    5
/**
 * @brief Get the current state of an installed app.
 * @return APP_STATE_* constant, or negative error code
 */
extern int app_get_status(const char *name);
/**
 * @brief List all installed apps into a buffer.
 *
 * Writes newline-separated "name:STATE" entries, e.g.:
 * "bt_echo:INSTALLED\nmacro_pad:RUNNING\n"
 *
 * @param buf      Destination buffer
 * @param buf_len  Buffer capacity
 * @return Number of apps written, negative on error
 */
extern int app_list(uint8_t *buf, uint32_t buf_len);
/**
 * @brief Write this app's own name into @p buf.
 * @param buf      Destination buffer (at least 32 bytes)
 * @param buf_len  Buffer capacity
 * @return Length of the name, negative on error
 */
extern int app_get_self_name(uint8_t *buf, uint32_t buf_len);
/**
 * @brief Start an installed app by name.
 *
 * Requires capability: "app.control"
 *
 * @param name  Null-terminated app name
 * @return 0 on success, negative errno on failure
 *   -ENOENT  app not installed
 *   -EBUSY   max concurrent apps already running
 *   -EPERM   capability not granted
 */
extern int app_start(const char *name);
/**
 * @brief Stop a running app by name.
 *
 * Requires capability: "app.control"
 * An app cannot stop itself; use return 0 from main() for self-exit.
 *
 * @param name  Null-terminated app name
 * @return 0 on success, negative errno on failure
 */
extern int app_stop(const char *name);
/**
 * @brief Start another app and signal this app to exit (lightweight handoff).
 *
 * Requires capability: "app.switch" OR "app.control"
 *
 * Starts (or resumes) the target app.  The calling app must then
 * return 0 from its own main() to complete the handoff.  The supervisor
 * detects both events via the "akira.lifecycle" IPC topic.
 *
 * Typical usage:
 * @code
 *   app_switch("supervisor");
 *   return 0;   // trigger clean exit -> lifecycle event -> supervisor redraws
 * @endcode
 *
 * @param name  Target app name
 * @return 0 on success (caller must return from main), negative on error
 */
extern int app_switch(const char *name);